Labatt POCM Deployment to UAT 09.16.2016/objects/Item_Load_Staging__c.object
<CustomObject>
    <fields>
        <fullName>If_Other_Item_Type__c</fullName>
        <label>If-Other Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Program_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Program Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quebec_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quebec Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Brand__c</fullName>
        <label>Item Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description_EN__c</fullName>
        <label>Item Description (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description_FR__c</fullName>
        <label>Item Description (FR)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Dimensions__c</fullName>
        <label>Item Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Marketing_Type__c</fullName>
        <label>Item Marketing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapEx</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type_EN__c</fullName>
        <label>Item Type (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type_FR__c</fullName>
        <label>Item Type (FR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Unit_of_Measure__c</fullName>
        <label>Item Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity_for_Program__c</fullName>
        <label>Minimum Quantity for Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Brand__c</fullName>
        <label>Program Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_UOM__c</fullName>
        <label>Quantity Per UOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Temporary Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Load Staging</label>
    <nameField>
        <displayFormat>ILS-{0000}</displayFormat>
        <label>Item Load Staging ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Load Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>